--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0",
-    "bootstrap-social": "^5.1.1",
-    "font-awesome": "^4.7.0",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-animation-components": "^3.0.0",
@@ -13,7 +13,7 @@
     "react-popper": "0.9.2",
     "react-redux": "^5.1.0",
     "react-redux-form": "^1.16.10",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "4.2.2",
     "react-scripts": "2.0.5",
     "react-transition-group": "^2.5.0",
     "reactstrap": "5.0.0",
